k8s_deployment/product.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-api
  # namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-api
  template:
    metadata:
      labels:
        app: product-api
    spec:
      containers:
        - name: product-api
          image: ghcr.io/junaid18183/product_microservice_sample:sha-8ead95a
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8800
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: product-api
  name: product-api
  # namespace: default
spec:
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 8800
  selector:
    app: product-api
  type: ClusterIP
